--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,6 +23,9 @@ jobs:
       - name: Build
         run: npm run build -- --base-href /scrapper-rentas/
 
+      - name: Disable Jekyll
+        run: echo "" > dist/scrapper-rentas/.nojekyll
+
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4
         with:
