--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "@angular/router": "^19.1.0",
     "@angular/ssr": "^19.1.0",
     "express": "^4.18.2",
+    "puppeteer": "^24.1.0",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
